#
#   This file is part of SST/macroscale: 
#                The macroscale architecture simulator from the SST suite.
#   Copyright (c) 2011 Sandia Corporation.
#   This software is distributed under the BSD License.
#   Under the terms of Contract DE-AC04-94AL85000 with Sandia Corporation,
#   the U.S. Government retains certain rights in this software.
#   For more information, see the LICENSE file in the top 
#   SST/macroscale directory.
#

library_includedir=$(includedir)/sstmac/configurations

library_include_HEADERS = \
  debug.ini \
  infinite.ini \
  pisces.ini \
  macrels.ini \
  hopper_pflow.ini \
  small_torus.ini \
  small_torus_simple.ini \
  edison_amm.ini \
  edison_amm1.ini \
  edison_amm2.ini \
  edison_amm3.ini \
  edison_amm4.ini \
  edison_intergroup.txt \
  edison_intragroup.txt \
  hopper_amm.ini \
  hopper_amm1.ini \
  hopper_amm2.ini \
  hopper_amm3.ini \
  hopper_amm1_simple.ini \
  hopper_amm2_simple.ini \
  hopper_amm3_simple.ini \
  hopper_simple.ini \
  deepthought.ini \
  parsedumpi.ini \
  mpi_test_all.ini \
  mpi_coverage.ini \
  mpi_only_coverage.ini \
  mpi_stats.ini \
	simple_switch.ini \
  smp_pflow.ini \
  smp_launch.ini \
  smp_mpi_test.ini \
  hopper_nodemap.txt \
  fullmap.txt \
  default.ini \
  sequoia.ini \
  exa1_pflow.ini \
  exa1_simple.ini \
  exa2_pflow.ini \
  exa2_simple.ini \
  exa_mini_top.ini

