#
#   This file is part of SST/macroscale: 
#                The macroscale architecture simulator from the SST suite.
#   Copyright (c) 2009-2018 NTESS.
#   This software is distributed under the BSD License.
#   Under the terms of Contract DE-NA0003525 with NTESS,
#   the U.S. Government retains certain rights in this software.
#   For more information, see the LICENSE file in the top 
#   SST/macroscale directory.
#

library_includedir=$(includedir)/sstmac/configurations

library_include_HEADERS = \
  debug.ini \
  infinite.ini \
  pisces.ini \
  macrels.ini \
  kahuna.ini \
  hopper_pisces.ini \
  small_torus.ini \
  small_torus_macrels.ini \
  dragonfly.ini \
  edison_amm.ini \
  edison_amm1.ini \
  edison_amm2.ini \
  edison_amm3.ini \
  edison_amm4.ini \
  edison_intergroup.txt \
  edison_intragroup.txt \
  hopper_amm.ini \
  hopper_amm1.ini \
  hopper_amm2.ini \
  hopper_amm3.ini \
  hopper_amm4.ini \
  hopper_amm1_macrels.ini \
  hopper_amm2_macrels.ini \
  hopper_amm3_macrels.ini \
  trinity_amm.ini \
  trinity_amm1_sculpin.ini \
  deepthought.ini \
  parsedumpi.ini \
  mpi_test_all.ini \
  mpi_coverage.ini \
  mpi_only_coverage.ini \
  mpi_stats.ini \
  smp_pisces.ini \
  smp_mpi_test.ini \
  hopper_nodemap.txt \
  fullmap.txt \
  default.ini \
  sequoia.ini \
  exa1_pisces.ini \
  exa1_macrels.ini \
  exa2_pisces.ini \
  exa2_macrels.ini \
  exa_mini_top.ini

