#
#   This file is part of SST/macroscale: 
#                The macroscale architecture simulator from the SST suite.
#   Copyright (c) 2011 Sandia Corporation.
#   This software is distributed under the BSD License.
#   Under the terms of Contract DE-AC04-94AL85000 with Sandia Corporation,
#   the U.S. Government retains certain rights in this software.
#   For more information, see the LICENSE file in the top 
#   SST/macroscale directory.
#

STD_SUBDIRS = \
  clang_replacements \
  replacements \
  common \
  dumpi_util \
  software \
  hardware \
  backends \
  main \
  libraries \
  skeletons \
  sst_core \
  install

library_includedir=$(includedir)/sstmac

library_include_HEADERS = \
variable.h \
blas.h \
compute.h \
sstmacro.h \
util.h \
sstsockets.h \
skeleton.h \
sumi.h

SUBDIRS = $(STD_SUBDIRS) 
DIST_SUBDIRS = $(STD_SUBDIRS) 


